terraform/main.tf
# Generated by CloudInfra Designer
# 2025-10-31T14:42:39.010Z

resource "aws_instance" "deep" {
  instance_type = "t2.large"
  ami           = "ami-123456789"
  subnet_id     = aws_subnet.subnet.id
  vpc_security_group_ids = [aws_security_group.security_group.id]
  tags = {
    Name = "deep"
    Environment = var.environment
    lvc_id = "4dc7f924-53ef-4f3f-a411-bb225052ade6"
  }
}

resource "aws_subnet" "subnet" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = "10.0.0.1/24"
  tags = {
    Name = "subnet"
    Environment = var.environment
    lvc_id = "99b101cf-a79a-49f7-b563-5e63855fdcb1"
  }
}

resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/23"
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name = "vpc"
    Environment = var.environment
    lvc_id = "c083dbed-1342-4aca-8e8f-3bb6eecc19ac"
  }
}

resource "aws_security_group" "security_group" {
  name        = "security_group"
  description = "Security group for security_group"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "security_group"
    Environment = var.environment
    lvc_id = "353ff7ba-3428-4e70-8cad-51ecf12c3f52"
  }
}


# === Infrastructure Relationships (Generated from Diagram Edges) ===
